# ZenTrack

./: .gitignore  CONTRIBUTING.md  CONTRIBUTION.md  README.md  dev.md  index.html  package-lock.json  package.json  tailwind.config.js
public/: manifest.json  robots.txt  sitemap.xml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  reminders.rs
src/ai/: availability.ts  index.ts  ollamaClient.ts  types.ts
src/components/: AIAssistantPanel.tsx  AIStatusBadge.tsx  AddTaskForm.tsx  DailyChecklist.tsx  DeadlinePanicShield.tsx  ExamMode.tsx  FocusCard.tsx  NaturalTaskInput.tsx  Navbar.tsx  ReminderPanel.tsx  SemesterSetupWizard.tsx  SmartTaskInput.tsx  StudyStreak.tsx  TaskModal.tsx  TimeRealityCheck.tsx
src/context/: ThemeContext.tsx
src/hooks/: index.ts  useAIAvailability.ts
src/lib/: reminders.ts
src/lib/nlp/: dateParser.ts  index.ts  taskParser.ts  types.ts  useNaturalTaskParser.ts
src/pages/: About.tsx  Landing.tsx  SemesterView.tsx  Spending.tsx  Tasks.tsx  TimeTracker.tsx  calendar.tsx
src/state/: appStore.ts  reminderStore.ts
